--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -4,65 +4,79 @@ body{
     background-size: cover;
     background-attachment: fixed;
     overflow: hidden;
-    height: 100vh;
+    height: 0vh;
     margin: 0;
     animation: puffIn 1s ease-in-out
 }
 .back-button {
-    width: 10%;
-    height: 10%;
-    right: 3%;
-    bottom: 170px;
-    position: relative; 
+    right: 94%;
+    bottom: 89%;
+    position: fixed;
 
 
 }
 .back-button-text{
-    font-family:Arial, Helvetica, sans-serif; 
-    font-size: 16px;
-    color: #FFFFFF;
-    bottom: 50px;
-    border: none;
-    left: 32%;
-    position: relative;
-    border-radius: 5px;
-    cursor: pointer;
-    
+    font-weight: bold;
+    font-size: 80%;
+    color: #ffffff;
+        
 }
 .back-button:hover {
     transform: scale(1.1);
 }
 .back-button-img{
-    width: 40%;
+    width: 50%;
     flex-direction: row;
-    height: 40%;
+    height: 50%;
 }
-.tienda-text{
-    font-family:Arial, Helvetica, sans-serif; 
-    font-size: 16px;
-    color: #FFFFFF;
-    bottom: 50px;
-    flex-direction: row;
+.tienda .btn {
+    display: flex;
+    align-items: center;
+    left: 60%;
+    position: absolute;
+    justify-content: center;
+    gap: 5px;
+    padding: 10px 15px;
+}
+
+.tienda .tienda-img {
+    width: 50px;
+    height: 50px;
+}
+
+.tienda .tienda-text {
+    font-weight: bold;
+    font-size: 14px;
+}
+.cerrar-sesion .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    bottom: 6%;
+    left: 10%;
+    position: absolute;
+    padding: 10px 15px;
+    font-weight: bold;
+    background-color: #dc354600; 
     border: none;
-    left: 90%;
-    position: relative;
-    border-radius: 5px;
-    cursor: pointer;
 }
-.tienda{
-    width: 10%;
-    height: 10%;
-    left: 93%;
-    bottom: 280px;
-    position: relative; 
+
+.cerrar-sesion .btn:hover {
+    background-color: #c82333; 
 }
-.tienda-img:hover {
-    transform: scale(1.1);
+
+.cerrar-sesion .cerrar-img {
+    width: 40px;
+    height: 40px;
 }
-.tienda-img{
-    width: 40%;
-    height: 40%;
+
+.cerrar-sesion .cerrar-text {
+    color: #fff; 
+    font-size: 15px;
+    
 }
+
 .game-description {
     font-size: 14px;
     color: #333;
@@ -118,7 +132,7 @@ body{
 }
 .menu-title {
     font-family: 'Lobster', cursive; 
-    margin-bottom: 100px;
+    margin-bottom: 10%;
     padding: 0%;
     min-height: 0vh;
     display: flex;
@@ -200,14 +214,14 @@ ul.navbar-nav {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-image: url(../../img/elegant-marble-multipurpose-background.jpg);
+    background-image: url(../../img/mapa.jpg);
     background-repeat: no-repeat;
     background-color: transparent !important; 
     background-size: cover;
     background-position: center;
 }
 .offcanvas-header {
-    background-image: url(../../img/elegant-marble-multipurpose-background.jpg);
+    background-image: url(../../img/mapa.jpg);
     background-repeat: no-repeat;
     box-shadow: none; 
     
@@ -433,7 +447,7 @@ img.imgSonido {
 }
 .modal-content {
     padding: 20px;
-    background-image: url(../../img/elegant-marble-multipurpose-background.jpg);
+    background-image: url(../../img/mapa.jpg);
     background-size: cover;
     background-repeat: no-repeat; 
     background-position: center;
@@ -478,7 +492,7 @@ nav {
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 10px;
-    margin-bottom: 40%;
+    margin-bottom: 0%;
 }
 .play-button {
     padding: 10px 30px;
@@ -725,15 +739,16 @@ nav {
     .game-description {
         display: flex;
         text-align: center;
+        background-color: #00000000;
+        color: #00000000;
         flex-direction: column; 
         align-items: center;
         margin: 0px;
+        background: transparent;
         margin-right: 0%; 
     }
     
-    .menu-title{
-        font-size: 250%;
-    }
+
     li.nav-item {
         list-style: none;
         display: flex;
@@ -752,27 +767,45 @@ nav {
         text-align: center;
     }
     .back-button {
-        width: 25%;
-        height: 25%;
-        right: 3%;
-        bottom: 140px;
+        right: 86%;
+        bottom: 88%;
         z-index: 10;
-        position: relative; 
+        position: fixed; 
     
+    }
+    .back-button-img{
+        width: 70%;
+        flex-direction: row;
+        height: 70%;
     }
     .back-button-text{
-        font-family:Arial, Helvetica, sans-serif; 
-        font-size: 17px;
         color: #ffffff00;
-        margin-bottom: 0px;
-        flex-direction: row;
-        border: none;
-        left: 30%;
-        bottom: 47px;
-        position: relative;
-        border-radius: 5px;
-        cursor: pointer;
+    }
+    .menu-title {
+        margin-bottom: 40%;
+        font-size: 3em;
         
     }
-    
+    .cerrar-sesion .btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+        top: 88%;
+        left: 10%;
+        position: fixed;
+        padding: 10px 15px;
+        font-weight: bold;
+        background-color: #dc354600; 
+        border: none;
+    }
+    .cerrar-sesion .cerrar-img {
+        width: 35px;
+        height: 35px;
+    }
+    .cerrar-sesion .cerrar-text {
+        color: #fff; 
+        font-size: 0px;
+        
+    }
 }
