--- a/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
+++ b/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
@@ -7,7 +7,177 @@ body{
     height: 100vh;
     margin: 0;
 }
+.offcanvas-backdrop.fade.show{
+    background-color: transparent !important;
+}
+.offcanvas-header .btn-close:hover {
+    background-color: rgba(182, 182, 182, 0.7); 
+    color: #FFFFFF; 
+}
+.offcanvas-header .btn-close {
+    color: #000000; 
+    border: none; 
+    font-size: 1.5rem; 
+    margin-right: 3%;
+    background-color: rgba(255, 255, 255, 0);
+    width: 40px;
+    height: 40px; 
+}
+.offcanvas-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-image: url(../../../img/mapa.jpg);
+    background-repeat: no-repeat;
+    background-color: transparent !important; 
+    background-size: cover;
+    background-position: center;
+}
+.offcanvas-header {
+    background-image: url(../../../img/mapa.jpg);
+    background-repeat: no-repeat;
+    box-shadow: none; 
+    
+    
+}
+#playButton2 p {
+    margin: 0;
+    font-size: 20px;
+    color: white;
+}
+#playButton2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    flex-direction: row;
+    margin-top: 1%;
+    transition: transform 200ms;
+}
+.avatar {
+    width: 100px; 
+    height: 100px;
+    border-radius: 50%;
+}
 
+#editProfileButton {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#editProfileButton:hover {
+    background-color: #0056b3;
+}
+.avatar {
+    width: 40px; 
+    height: 40px;
+    border-radius: 50%; 
+}
+.avatar-container {
+    position: relative;
+    display: inline-block;
+}
+.avatar-number {
+    position: absolute;
+    top: 26px;  
+    left: 25px;
+    background-color: rgba(80, 150, 194, 0.7);
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    padding: 2px 5px;
+    border-radius: 50%; 
+    width: 22px;
+    height: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.avatar-options {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; 
+    justify-content: center; 
+}
+
+.avatar-option {
+    width: 50px; 
+    height: 50px;
+    border-radius: 50%; 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; 
+    justify-content: center; 
+    cursor: pointer;
+    border: 2px solid transparent;
+    transition: border 0.3s;
+}
+.avatar-options2 {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; 
+    justify-content: center; 
+}
+
+.avatar-option2 {
+    width: 50px; 
+    height: 50px;
+    border-radius: 50%; 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; 
+    justify-content: center; 
+    cursor: pointer;
+    border: 2px solid transparent;
+    transition: border 0.3s;
+}
+.avatar-icon {
+    width: 20px; 
+    height: 20px; 
+}
+
+.avatar-option:hover {
+    border: 2px solid blue; 
+}
+.avatar-option2:hover {
+    border: 2px solid blue; 
+}
+.modal,
+.modal-dialog {
+    box-shadow: none !important;
+}
+
+.modal-backdrop {
+    background-color: transparent !important; 
+}
+.modal-content {
+    padding: 20px;
+    background-image: url(../../../img/mapa.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; 
+    background-position: center;
+
+}
+.modal-header .btn-close {
+    border: none; 
+    font-size: 1.5rem; 
+    width: 40px;
+    height: 40px; 
+    transition: background-color 0.3s;
+}
+
+
+.modal-header .btn-close:hover {
+    background-color: rgba(182, 182, 182, 0.7); 
+    color: #FFFFFF; 
+}
 /*botones*/
 .btnLogin{
     width: 200px;
@@ -35,7 +205,7 @@ body{
     transition: 600ms;
     margin: auto;
     position: relative;
-    bottom: 7vh;
+    bottom: 17vh;
 }
 #formulario:hover{
     transform: none;
