--- a/PROYECTO-MJC memoorize/cartas/style.css
+++ b/PROYECTO-MJC memoorize/cartas/style.css
@@ -71,7 +71,7 @@ button {
     border-radius: 5px;
     width: 100%;
     height: 100%;
-    background: #282A3A;
+    background-image: url(img/carta.png);
     transition: transform .6s cubic-bezier(0.4, 0.0, 0.2, 1);
     backface-visibility: hidden;
 }
