--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -214,14 +214,14 @@ ul.navbar-nav {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-image: url(../../img/mapa.jpg);
+    background-image: url(../../img/elegant-marble-multipurpose-background.jpg);
     background-repeat: no-repeat;
     background-color: transparent !important; 
     background-size: cover;
     background-position: center;
 }
 .offcanvas-header {
-    background-image: url(../../img/mapa.jpg);
+    background-image: url(../../img/elegant-marble-multipurpose-background.jpg);
     background-repeat: no-repeat;
     box-shadow: none; 
     
@@ -447,7 +447,7 @@ img.imgSonido {
 }
 .modal-content {
     padding: 20px;
-    background-image: url(../../img/mapa.jpg);
+    background-image: url(../../img/elegant-marble-multipurpose-background.jpg);
     background-size: cover;
     background-repeat: no-repeat; 
     background-position: center;
