--- a/PROYECTO-MJC memoorize/multijugador/crearSala/css/crearSala.css
+++ b/PROYECTO-MJC memoorize/multijugador/crearSala/css/crearSala.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../../img/juegocartas2.gif);
+    background-image: url(../../../img/fondo4.gif);
     background-size: 100% 100%;
     background-attachment:fixed;
     background-repeat: no-repeat;
