--- a/PROYECTO-MJC memoorize/cartas/style.css
+++ b/PROYECTO-MJC memoorize/cartas/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../img/juegocartas2.gif);
+    background-image: url(../img/fondo4.gif);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
