--- a/PROYECTO-MJC memoorize/multijugador/sala/css/sala.css
+++ b/PROYECTO-MJC memoorize/multijugador/sala/css/sala.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../../img/juegocartas2.gif);
+    background-image: url(../../../img/fondo4.gif);
     background-size: 100% 100%;
     background-attachment:fixed;
     background-repeat: no-repeat;
@@ -15,9 +15,8 @@ body{
     background-color: green;
 }
 .logo{
-    width: 30%;
-    position: relative;
-    left: 33%;
+    position:fixed;
+
 }
 
 input.input{    
