--- a/PROYECTO-MJC memoorize/multijugador/unirseSala/css/style.css
+++ b/PROYECTO-MJC memoorize/multijugador/unirseSala/css/style.css
@@ -1,23 +1,39 @@
 body{
-    background-image: url(../../../img/fondoMultijugador.jpg);
+    background-image: url(../../../img/fondo4.gif);
     background-size: 100% 100%;
     background-attachment:fixed;
     background-repeat: no-repeat;
 }
 .btnComparar button{
+    padding: 10px 30px;
+    background-image: url(../../../img/boton.png);
+    background-size: cover;
+   
+    background-color: rgba(0, 0, 0, 0);
+    background-repeat: no-repeat; 
+    background-position: center;
+    text-decoration: none; 
+    position: relative;
+    z-index: 1;
+    left: 87vh;
+    color: inherit;
+    top: 28vh;
+    pointer-events: auto;
+    color: rgb(255, 255, 255);
+    flex-direction: row;
     border: none;
-    width: 180px;
-    height: 50px;
-    border-radius: 15px;
-    margin: 2%;
-    position: relative;
-    left: 37%;
-    background-color: green;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
 }
+
 .logo{
-    width: 30%;
+
+    width: 15%;
     position: relative;
-    left: 33%;
+    left: 41%;
+    top: 10vh;
 }
 
 input.input{    
@@ -28,13 +44,17 @@ input.input{
     height: 40px;
     transition: 100ms;
     position: relative;
-    left: 37.5%;
+    left: 40%;
+    top: 20vh;
 }
+
 input.input:focus{
-    background-color: rgb(0, 231, 96);
+    background-color: rgb(13, 130, 213);
+
 }
+
 input.input:hover {  
-    background-color: rgb(0, 231, 96);
+    background-color: rgb(13, 130, 213);
     box-shadow: 0px 0px 10px black;
 }
 
@@ -45,4 +65,7 @@ input.input:hover {
     margin: auto;
     position: relative;
     top: 50px;
+}
+.container{
+    background-color: rgb(255, 255, 255,0.5);
 }
