--- a/PROYECTO-MJC memoorize/juegos/rompecabeza/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/rompecabeza/css/style.css
@@ -1,5 +1,5 @@
 ﻿body{
-    background-image: url(../images/fond.jpg);
+    background-image: url(../images/fondo4.gif);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
