--- a/PROYECTO-MJC memoorize/juegos/rompecabeza/css/image-puzzle.css
+++ b/PROYECTO-MJC memoorize/juegos/rompecabeza/css/image-puzzle.css
@@ -3,13 +3,24 @@
     border-top:2px solid #f5f2f2;
     height:1px;
 }
+.imagen-superior {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.imagen-superior img {
+    width: 70px; /* Ajusta el tamaño según lo que necesites */
+    height: auto;
+}
+
 
 #collage #playPanel {
     background-color:#6fb0f675;
     padding:10px 0px;
     margin: 10px auto;
     max-width:800px;
-    width:95%;
+    width:95%
 }
 
 #collage #actualImageBox {
