--- a/PROYECTO-MJC memoorize/multijugador/src/css/style.css
+++ b/PROYECTO-MJC memoorize/multijugador/src/css/style.css
@@ -3,6 +3,7 @@ body{
     background-size: cover;
     background-attachment:fixed;
     background-repeat: no-repeat;
+    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -30,6 +31,25 @@ body{
     top: 80%;
 }
 
+.gif{
+    position:relative;
+    left: 174vh;
+    top: 35vh;
+}
+
+.comentario{ 
+
+display: none;
+margin-top: 10px;
+padding: 10px;
+width: 20vh;
+border: 1px solid #ccc;
+background-color: #f9f9f94b;
+border-radius: 5px;
+position: relative;
+left: 80%;
+top: 20vh;
+}
 .rowes{
     display: flex;
     gap: 3%;
