--- a/PROYECTO-MJC memoorize/views/principal.html
+++ b/PROYECTO-MJC memoorize/views/principal.html
@@ -23,7 +23,7 @@
     </header> 
     <div class="container-fluid">
         <img src="../img/logo/aqua-Memorize.png" alt="Logo del Juego" class="logo"> 
-        <button class="button2" href="../login/bar.html" onclick="createBubbles(event)">
+        <button class="button2" href="../views/bar.html" onclick="createBubbles(event)">
             <h3 class="btnTex">JUGAR</h3>  
             <div class="bubbles"></div> <!-- Contenedor de burbujas -->
         </button>
