--- a/PROYECTO-MJC memoorize/stiles/bar.css
+++ b/PROYECTO-MJC memoorize/stiles/bar.css
@@ -1,10 +1,14 @@
 body {
     margin: 0;
+    background-image: url(../img/fondo4.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;   
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+
 }
 
 .center {
@@ -93,13 +97,13 @@ body {
 
 @media (max-width: 768px) {
     .loading-bar {
-        width: 80%; /* Ajusta el ancho de la barra de carga en pantallas pequeñas */
+        width: 80%; 
         left: 10%;
     }
 
     .logo {
-        max-width: 80%; /* Cambia el tamaño del logo en pantallas pequeñas */
-        margin-bottom: 5px; /* Ajusta el margen inferior en pantallas pequeñas */
+        max-width: 80%; 
+        margin-bottom: 5px; 
     }
     .loading-text {
         position: absolute; 
