--- a/PROYECTO-MJC memoorize/login/resgistrate/src/css/style.css
+++ b/PROYECTO-MJC memoorize/login/resgistrate/src/css/style.css
@@ -12,30 +12,29 @@ body{
 .btnLogin{
     width: 200px;
     height: 40px;
-    background-color: rgb(35, 92, 82) !important;  
+    background-color: rgb(211, 153, 46) !important;  
     transition: 600ms;
     margin-bottom: 3%;
 }
 .btnLogin:hover{
-    transform: scale(1.1);
+    transform: scale(0.9);
 }
 /*Formulario*/
 #formulario{
     width: 40%;
     height: auto;
-    border-radius: 30px;
-    background-image: url(../../../../img/mapa.jpg);
-    background-color: rgba(240, 248, 255, 0.541);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; 
-    opacity: 1;
-    padding: 0%;
-    box-shadow: 20px 0px 40px rgb(0, 0, 0, 0.3);
-    transition: 600ms;
-    margin: auto;
+    text-shadow: 3px 3px 0px #ffffff07,   
+                 6px 6px 0px #8b451300;  
     position: relative;
-    bottom: 15vh;
+    padding: 18px;
+    border: 5px solid #b1891b; 
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgba(255, 255, 0, 0.63) 0%, rgba(38, 28, 104, 0.619) 100%);
+    box-shadow: 0 0 15px rgba(162, 133, 82, 0.6),
+                inset 0 0 10px rgb(0, 170, 255); 
+    opacity: 1;
+    transition: 200ms;
+    bottom: 5vh;
 }
 #formulario:hover{
     transform: none;
@@ -80,29 +79,38 @@ body{
     height: 15px;
 }
 input.input{    
-  padding-right: 2.5rem;
-  background-color: rgba(255, 255, 255, 0.427);
-  border: 1px solid black;
-  transition: 100ms;
-}
-input.input:focus{
-    background-color: rgb(255, 255, 255);
-    border: 1px solid black;
-    box-shadow: 0px 0px 5px black;
-}
-input.input:hover {  
-    background-color: rgb(255, 255, 255);
-    
-}
-.text{
-    color: aliceblue;
+    padding-right: 2.5rem;
+    background-color: rgba(255, 255, 255, 0.427);
+    border: 1px solid#F28F16;
+    transition: 100ms;
+  }
+  input.input:focus{
+      background-color: rgba(255, 255, 255, 0.77);
+      border: 1px solid black;
+      box-shadow: 0px 0px 5px#F28F16;
+  }
+  input.input:hover {  
+      background-color: rgba(255, 255, 255, 0.692);
+      
+  }
+  .text{
+      color: #ffffff;
+      text-align: center;
+      font-size: 25px;
+      font-family: 'Pirata One', cursive; 
+  }
+  text:hover{
+      transform: scale(1.1);
+      
+  }
+  .text2{
+    color:#014d7d; 
     text-align: center;
-    font-size: 18px;
+    font-family: 'Pirata One', cursive; 
+    font-size: 40px;
 }
-.text2{
-    color: rgb(0, 0, 0);
-    text-align: center;
-    font-size: 28px;
+.text2:hover{
+    color: rgb(54, 32, 225)
 }
 /*sonido*/
 #playButton {
@@ -147,28 +155,36 @@ input.input:hover {
 
 /*texto*/
 .textCrear{
-    font-size: 1.3em;
-    color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.5em;
+    
+    color:#ffffff;
+    font-family: 'Pirata One', cursive; 
     text-align: center;
 }
 .textCrear a{
-    color: rgb(255, 255, 255) !important; 
+    color: #ffae00; 
     font-size: 22px;
-    font-family: Arial, Helvetica, sans-serif !important;
+    font-family: 'Pirata One', cursive; 
+}
+.textCrear a:hover{
+    color: rgb(167, 225, 32) !important;
 }
 
 .textOlvide{
     font-size: medium;
-    color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
+    color: #F28F16;
+    font-family: 'Pirata One', cursive; 
     text-align: center;
     
 }
 .textOlvide a{
-    color: rgb(0, 0, 0) !important; 
+    color:#ffffff; 
     font-size: 1.3em;
     
+    
+}
+.textOlvide a:hover{
+    color: rgb(167, 225, 32) !important;
 }
 
 
