--- a/PROYECTO-MJC memoorize/login/src/css/style.css
+++ b/PROYECTO-MJC memoorize/login/src/css/style.css
@@ -30,7 +30,7 @@ body{
     padding: 18px;
     border: 5px solid #b1891b; 
     border-radius: 30px; 
-    background: radial-gradient(circle, rgba(209, 209, 32, 0.63) 0%, rgba(38, 28, 104, 0.619) 100%);
+    background: radial-gradient(circle, rgba(255, 255, 0, 0.63) 0%, rgba(38, 28, 104, 0.619) 100%);
     box-shadow: 0 0 15px rgba(162, 133, 82, 0.6),
                 inset 0 0 10px rgb(0, 170, 255); 
     opacity: 1;
@@ -105,13 +105,13 @@ text:hover{
     
 }
 .text2{
-    color:#ffae00; 
+    color:#014d7d; 
     text-align: center;
     font-family: 'Pirata One', cursive; 
     font-size: 40px;
 }
 .text2:hover{
-    color: rgb(167, 225, 32);
+    color: rgb(54, 32, 225)
 }
 /*sonido*/
 #playButton {
