--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -119,10 +119,10 @@ body{
     color: #ffffff; 
     text-shadow: 3px 3px 0px #ffffff00,   
                  6px 6px 0px #8b451300; 
-                 border-radius: 30px; 
-                 background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgba(171, 171, 169, 0.451) 100%);
-                 box-shadow: 0 0 15px rgb(255, 166, 0),
-                             inset 0 0 10px rgb(44, 166, 227); 
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgba(171, 171, 169, 0.451) 100%);
+    box-shadow: 0 0 15px rgb(255, 166, 0),
+    inset 0 0 10px rgb(44, 166, 227); 
     position: absolute;
     bottom: -100px;
     left: -15%;
@@ -261,23 +261,29 @@ ul.navbar-nav {
     height: 40px; 
 }
 .offcanvas-body {
-    
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-image: url(../../img/elegant-marble-multipurpose-background.jpg);
-    background-repeat: no-repeat;
-    background-color: transparent !important; 
-    background-size: cover;
-    background-position: center;
+    color: #000;
+    background-color: rgba(0, 0, 0, 0); 
 }
+
 .offcanvas-header {
-    background-image: url(../../img/elegant-marble-multipurpose-background.jpg);
     background-repeat: no-repeat;
-    box-shadow: none; 
-    
-    
+    box-shadow: none;
+    background-color: rgba(0, 0, 0, 0);
+}
+.offcanvas {    
+    color: #000000; 
+    font-size: 24px;
+    text-align: center;
+    text-shadow: 3px 3px 0px #ffffff00,   
+    6px 6px 0px #8b451300; 
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%);
+    box-shadow: 0 0 15px rgb(255, 166, 0),
+    inset 0 0 10px rgb(44, 166, 227); 
 }
 .avatar {
     width: 100px; 
@@ -502,8 +508,14 @@ img.imgSonido {
 }
 .modal-content {
     padding: 20px;
-    background-image: url(../../img/elegant-marble-multipurpose-background.jpg);
-    background-size: cover;
+    font-family: 'Pirata One', cursive; 
+    font-size: 22px;
+    text-shadow: 3px 3px 0px #ffffff00,   
+    6px 6px 0px #8b451300; 
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%);
+    box-shadow: 0 0 15px rgb(255, 166, 0),
+    inset 0 0 10px rgb(44, 166, 227); 
     background-repeat: no-repeat; 
     background-position: center;
 
