--- a/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
+++ b/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../img/fondo4.gif);
+    background-image: url(../../img/fondo4.gif);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -71,7 +71,7 @@ button {
     border-radius: 5px;
     width: 100%;
     height: 100%;
-    background-image: url(img/carta.png);
+    background-image: url(../img/carta.png);
     transition: transform .6s cubic-bezier(0.4, 0.0, 0.2, 1);
     backface-visibility: hidden;
 }
@@ -105,7 +105,7 @@ button {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 21pt;
-    color: #282A3A;
+    color: #0bda49;
 }
 .highlight {
     color: #7303c0;
@@ -113,4 +113,75 @@ button {
 .card-back img {
     width: 100%; 
     height: auto;
+}
+.score-table h2 {
+    text-align: center;
+    color: #1ba01b;
+    margin-bottom: 15px;
+}
+
+.score-table table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+
+.score-table th,
+.score-table td {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+
+.score-table th {
+    background-color: #f5f5f5;
+    font-weight: bold;
+}
+
+.score-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.score-table tr:hover {
+    background-color: #f0f0f0;
+}
+
+
+.modal-content {
+    width: 60%;
+    margin: 5% auto;
+    border-radius: 5px;
+    background-image: url(../../img/agua3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
+    display: grid;
+    gap: 5px;
+}
+
+.modal-header {
+    padding-top: 3%;
+    font-family: 'good-times';
+    font-weight: bold;
+    color: bisque;
+}
+
+.modal-body {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 10px;
+    padding: 3%;    
+}
+
+/*MODAL PUNTOS*/
+.modal-score-body {
+    display: grid;
+    justify-content: space-around;
+    padding: 2%;
+}
+
+.modal-tscore-body {
+    display: grid;
+    padding: 2%;
 }
