--- a/PROYECTO-MJC memoorize/views/principal.html
+++ b/PROYECTO-MJC memoorize/views/principal.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MJC memorize</title>
     <link rel="icon" href="../img/logo/MJC.png" type="image/icon">
-    <link rel="stylesheet" href="../stiles/principal.css">
+    <link rel="stylesheet" href="../style/principal.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../stiles/icon.css">
+    <link rel="stylesheet" href="../style/icon.css">
     <link href="../https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body> 
