--- a/PROYECTO-MJC memoorize/login/resgistrate/src/css/style.css
+++ b/PROYECTO-MJC memoorize/login/resgistrate/src/css/style.css
@@ -7,7 +7,57 @@ body{
     height: 100vh;
     margin: 0;
 }
+.modal-content {
+    padding: 20px;
+    font-family: 'Pirata One', cursive; 
+    font-size: 22px;
+    text-shadow: 3px 3px 0px #ffffff00,   
+    6px 6px 0px #8b451300; 
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%) !important;
+    box-shadow: 0 0 15px rgb(255, 166, 0),
+    inset 0 0 10px rgb(44, 166, 227); 
+    background-repeat: no-repeat; 
+    background-position: center;
 
+}
+.modal-footer {
+    border: none !important;
+}
+.btnLogin{
+    width: 200px;
+    height: 40px;
+    background-color: rgb(211, 153, 46) !important;  
+    transition: 600ms;
+    margin-bottom: 3%;
+}
+#response{
+    color: #000000;
+    font-size: 1.0em; 
+    
+}
+.btnLogin:hover{
+    transform: scale(0.9);
+}
+.hibtn{
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%) !important;
+}
+.hibtn:hover{
+    background: radial-gradient(circle, rgba(255, 255, 212, 0.699) 0%, rgb(33, 148, 202) 100%) !important;
+}
+.bodyModal{
+    padding: 20px;
+    font-family: 'Pirata One', cursive; 
+    font-size: 22px;
+    text-shadow: 3px 3px 0px #ffffff00,   
+    6px 6px 0px #8b451300; 
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%) !important;
+    box-shadow: 0 0 15px rgb(255, 166, 0) !important ;
+    inset: 0 0 10px rgb(44, 166, 227) !important; 
+    background-repeat: no-repeat; 
+    background-position: center;
+}
 /*botones*/
 .btnLogin{
     width: 200px;
@@ -34,7 +84,7 @@ body{
                 inset 0 0 10px rgb(0, 170, 255); 
     opacity: 1;
     transition: 200ms;
-    bottom: 5vh;
+    bottom: 10vh;
 }
 #formulario:hover{
     transform: none;
