--- a/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
+++ b/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
@@ -146,42 +146,29 @@ button {
     background-color: #f0f0f0;
 }
 
+.oculto {
+    display: none;
+}
+
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
 
 .modal-content {
-    width: 60%;
-    margin: 5% auto;
+    background: white;
+    padding: 20px;
     border-radius: 5px;
-    background-image: url(../../img/agua3.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    text-align: center;
-    display: grid;
-    gap: 5px;
 }
 
-.modal-header {
-    padding-top: 3%;
-    font-family: 'good-times';
-    font-weight: bold;
-    color: bisque;
-}
-
-.modal-body {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 10px;
-    padding: 3%;    
-}
-
-/*MODAL PUNTOS*/
-.modal-score-body {
-    display: grid;
-    justify-content: space-around;
-    padding: 2%;
-}
-
-.modal-tscore-body {
-    display: grid;
-    padding: 2%;
+.oculto {
+    display: none;
 }
