--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -255,6 +255,7 @@ ul.navbar-nav {
     color: #000000; 
     border: none; 
     font-size: 1.5rem; 
+    border-bottom: 1px solid #34495e;
     margin-right: 3%;
     background-color: rgba(255, 255, 255, 0);
     width: 40px;
@@ -275,13 +276,13 @@ ul.navbar-nav {
     background-color: rgba(0, 0, 0, 0);
 }
 .offcanvas {    
-    color: #000000; 
+    color: #ecf0f1;
     font-size: 24px;
     text-align: center;
     text-shadow: 3px 3px 0px #ffffff00,   
     6px 6px 0px #8b451300; 
     border-radius: 30px; 
-    background: radial-gradient(circle, rgba(255, 255, 110, 0.699) 0%, rgb(33, 148, 202) 100%);
+    background: radial-gradient(circle, rgb(211, 211, 36) 0%, rgb(33, 148, 202) 100%);
     box-shadow: 0 0 15px rgb(255, 166, 0),
     inset 0 0 10px rgb(44, 166, 227); 
 }
@@ -290,21 +291,35 @@ ul.navbar-nav {
     height: 100px;
     border-radius: 50%;
 }
+.profile-card {
+    background-color: #34495e00; 
+    border-radius: 10px;
+    padding: 20px;
+    width: 100%;
+    max-width: 350px;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    position: relative;
+    margin-bottom: 20px;
+    border: 5px solid #ffcc00; 
+}
 
 #editProfileButton {
-    background-color: #007bff;
-    color: white;
+    background-color: #ffca28;
     border: none;
-    border-radius: 5px;
+    border-radius: 50px;
     padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: #333;
     cursor: pointer;
-    transition: background-color 0.3s;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    margin-top: 20px;
 }
 
 #editProfileButton:hover {
-    background-color: #0056b3;
+    background-color: #ffa726;
 }
-
 /*botones*/
 #playButton {
     display: flex;
@@ -397,6 +412,54 @@ img.imgSonido {
     transition: transform 200ms;
     
 }
+.buttons-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15px;
+}
+
+.action-button {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.action-button:hover {
+    background-color: #c0392b;
+}
+
+.orange-button {
+    background-color: #ff7043;
+}
+
+.orange-button:hover {
+    background-color: #ff5722;
+}
+
+.yellow-button {
+    background-color: #ffc107;
+}
+
+.yellow-button:hover {
+    background-color: #ffb300;
+}
+.player-details h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.5rem;
+    color: #ff7043;     
+    margin: 10px 0;
+}
+
+.player-details p {
+    font-size: 1.2rem;
+    color: #333;
+}
 #soundButton p {
     margin: 8px;
     font-size: 26px;
@@ -404,18 +467,41 @@ img.imgSonido {
     color: #012840;
 }
 .avatar {
-    width: 40px; 
+    width: 40px;
     height: 40px;
-    border-radius: 50%; 
+    border-radius: 50%;
+    border: 5px solid #fff; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .avatar-container {
-    position: relative;
+    background-color: #e0f7fa00; 
+    padding: 10px;
+    border-radius: 50%;
     display: inline-block;
+    position: relative;
+    margin-bottom: 15px;
+}
+.avatar2 {
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+}
+.avatar2:hover {
+    transform: scale(1.1);
+}
+.avatar-container2 {
+    background-color: #e0f7fa00; 
+    padding: 10px;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    margin-bottom: 15px;
 }
 .avatar-number {
     position: absolute;
-    top: 26px;  
-    left: 25px;
+    top: 0px;  
+    left: 0px;
     background-color: rgba(80, 150, 194, 0.7);
     color: rgb(255, 255, 255);
     font-size: 14px;
@@ -429,22 +515,21 @@ img.imgSonido {
 }
 .avatar-options {
     display: flex;
-    flex-wrap: wrap;
-    gap: 10px; 
-    justify-content: center; 
+    justify-content: space-between;
+    margin-bottom: 15px;
 }
 
+
 .avatar-option {
-    width: 50px; 
-    height: 50px;
-    border-radius: 50%; 
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px; 
-    justify-content: center; 
-    cursor: pointer;
+    width: 60px;
+    height: 60px;
     border: 2px solid transparent;
-    transition: border 0.3s;
+    border-radius: 5px;
+    transition: border-color 0.3s ease;
+}
+
+.avatar-option:hover {
+    border-color: #ecf0f1;
 }
 .avatar-options2 {
     display: flex;
@@ -510,6 +595,7 @@ img.imgSonido {
     padding: 20px;
     font-family: 'Pirata One', cursive; 
     font-size: 22px;
+    border: 5px solid #ffcc00; 
     text-shadow: 3px 3px 0px #ffffff00,   
     6px 6px 0px #8b451300; 
     border-radius: 30px; 
@@ -520,11 +606,53 @@ img.imgSonido {
     background-position: center;
 
 }
+#editProfileForm .form-label {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #333;
+}
+
+#editProfileForm .form-control {
+    border-radius: 15px;
+    padding: 10px;
+    font-size: 1rem;
+}
+
+.action-button {
+    background-color: #ffca28;
+    border: none;
+    border-radius: 30px; 
+    padding: 10px 20px; 
+    font-size: 0.9rem;   
+    font-weight: bold;
+    color: #333;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
+.action-button:hover {
+    background-color: #e68900;
+}
+/* Modal de estadísticas */
+.stats-container p {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.stats-container span {
+    color: #ff5722;
+    font-weight: bold;
+}
 .modal-header .btn-close {
     border: none; 
     font-size: 1.5rem; 
+    border-bottom: none;
     width: 40px;
     height: 40px; 
+    background-color: transparent;
+    border: none;
     transition: background-color 0.3s;
 }
 
